<resources>
    <string name="app_name">iManage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="no_account">New to iManage</string>
    <string name="welcome">Know where Your money go by Recording your debits, credits and daily expenses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="available_expenses">
        <item>choose your expense category </item>
        <item>Sport and Leisure</item>
        <item>Make ups</item>
        <item>Food and Restaurants </item>
        <item>Clothes</item>
        <item>Transportation</item>
        <item>Passion </item>
        <item>Domestic Materials</item>
        <item>Others</item>

    </string-array>

    <string name="amount">Amount</string>
    <string name="phone">Phone</string>
    <string name="timeToPay">Payment Date</string>
    <string name="dueDate">Due Date</string>
    <string name="GiverNames">Names</string>

    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="dpp">Debit Payment Progress</string>
    <string name="cpp">Credit Payment Progress</string>


</resources>
