<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/colorAccent"
    tools:context=".DebitedTab">

        <android.support.v7.widget.CardView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:id="@+id/debitedCV"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/debitLayout"

                android:layout_margin="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="1"

                    >
                    <TextView
                        android:text="@string/GiverNames"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        />
                    <TextView
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/debtorNames"
                        />
                    <TextView
                        android:text="@string/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/debtorPhone"
                        android:text=""
                        />
                    <TextView
                        android:text="@string/amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/debtorAmount"
                        android:text=""
                        />
                    <TextView
                        android:text="@string/dueDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        />
                    <TextView
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dueDate"
                        />
                    <TextView
                        android:text="@string/timeToPay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/paymentDate"
                        />
                </GridLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


</FrameLayout>