<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditedTab">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:id="@+id/creditedCV"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            >
            <TextView
                android:text="ID:"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditIdLabel"
                />
            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/creditId"
                android:layout_toRightOf="@+id/creditIdLabel"
                />
            <TextView
                android:text="credit Names:"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditNameLabel"
                android:layout_below="@+id/creditId"
                />
            <TextView
                android:text=""
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditorName"
                android:layout_below="@+id/creditId"
                android:layout_toRightOf="@+id/creditNameLabel"
                />

            <TextView
                android:text="@string/phone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditorPhoneLabel"
                android:layout_below="@+id/creditorName"
             />
            <TextView
                android:text=""
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditorPhone"
                android:layout_below="@+id/creditorName"
                android:layout_toRightOf="@+id/creditNameLabel"

                />
            <TextView
                android:text="@string/amount"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditAmountLabel"
                android:layout_below="@+id/creditorPhone"
                />
            <TextView
                android:text=""
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditAmount"
                android:layout_below="@+id/creditorPhone"
                android:layout_toRightOf="@+id/creditAmountLabel"

                />
            <TextView
                android:text="@string/dueDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditDueDateLabel"
                android:layout_below="@+id/creditAmount"
                />
            <TextView
                android:text=""
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditDueDate"
                android:layout_below="@+id/creditAmount"
                android:layout_toRightOf="@+id/creditAmountLabel"
                />

            <TextView
                android:text="@string/timeToPay"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/CreditPaymentDate"
                android:layout_below="@+id/creditDueDate"
                />
            <TextView
                android:text=""
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:id="@+id/creditPaymentDate"
                android:layout_below="@+id/creditDueDate"
                android:layout_toRightOf="@+id/CreditPaymentDate"
                />
            <TextView
                android:textSize="32dp"
                android:layout_marginTop="32dp"
                android:text=" "
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginRight="4dp"
                android:id="@+id/payedAmount"
                android:layout_below="@+id/creditPaymentDate"
                android:layout_alignParentBottom="true"
                />





        </RelativeLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>